--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   --navy-blue: #1F1F1F;
   --navy-blue-dark: #141414;
   --oxford-blue-light: #2A78F4;
-  --oxford-blue: #d99e6a;
+  --oxford-blue: #7e4a1c;
   --blue: #FFFFFF;
   --off-white: #CCCCCC;
   --white: #b1980d;
@@ -138,7 +138,7 @@ nav {
 }
 
 .movie img:hover {
-  opacity: 0.9;
+  opacity: 0.8;
   animation: fadeOut 1.2s ease;
 }
 
@@ -157,7 +157,7 @@ nav {
 }
 
 .primary-info h3:hover {
-  color: #d13b21;
+  color: #3b1900;
 }
 
 .secondary-info {
